# Tech-Notes-and-Projects

./: .gitignore  README.md  file3.txt
Agentic_RAG/agent_openai/: README.md  cli.py  config.yaml  requirements.txt  run_agent_openai.sh
Agentic_RAG/agent_openai/agent/: agent.py  llm.py  llm_openai.py  memory.py  schema.py
Agentic_RAG/agent_openai/tmp/: demo.txt
Agentic_RAG/agent_openai/tools/: calculator.py  local_read.py  local_write.py
Agentic_RAG/local_agent_qwen/: README.md  cli.py  requirements.txt
Agentic_RAG/local_agent_qwen/agent/: agent.py  llm.py
Agentic_RAG/local_agent_qwen/tools/: fs_search.py
Agentic_RAG/rag_qwen_bge_compare/: README.md  chroma_builder.py  document_processor.py  rag_cli.py  rag_compare.py  requirements.txt  reranker.py  run_build.sh  run_compare.sh  utils.py
Agentic_RAG/rag_qwen_bge_compare/chroma_db/: chroma.sqlite3
Agentic_RAG/rag_qwen_bge_compare/data/processed/: processed.jsonl
Agentic_RAG/rag_qwen_bge_compare/data/raw/: 00_readme.md  01_git.txt  02_rag_tips.md  example.txt
Cmake/: .clang-tidy  CMakeLists.txt  README.md
Cmake/include/my_project/: hello.h
Cmake/src/: hello.cpp  main.cpp
Git/: README.md
RPC/: CMakeLists.txt  README.md  remark.txt
RPC/apps/: client_main.cpp  server_main.cpp
RPC/include/rpc/: client.h  frame.h  net.h  protocol.h  server.h  value.h
RPC/src/: client.cpp  frame.cpp  net.cpp  protocol.cpp  server.cpp  value.cpp
cpp-microservice/: CMakeLists.txt  README.md  config.json
cpp-microservice/cpp-redis-mysql-ms/: CMakeLists.txt  README.md  python_test_client.py
cpp-microservice/cpp-redis-mysql-ms/include/: dao.hpp  mysql_pool.hpp  redis_client.hpp  utils.hpp
cpp-microservice/cpp-redis-mysql-ms/scripts/: run_example.sh
cpp-microservice/cpp-redis-mysql-ms/src/: main.cpp
cpp-microservice/cpp_chat_room/: CMakeLists.txt  README.md
cpp-microservice/cpp_chat_room/src/client/: ChatClient.cpp  ChatClient.hpp  main.cpp
cpp-microservice/cpp_chat_room/src/common/: net.hpp
cpp-microservice/cpp_chat_room/src/server/: ChatServer.cpp  ChatServer.hpp  main.cpp
cpp-microservice/include/app/: config.h  logger.h
cpp-microservice/include/db/: mysql_pool.h  redis_client.h
cpp-microservice/include/model/: user.h  user_dao.h
cpp-microservice/include/util/: strutil.h
cpp-microservice/mysql_microservice_modular/: CMakeLists.txt  README.md
cpp-microservice/mysql_microservice_modular/include/service/: config.hpp  handlers.hpp  mysql_pool.hpp
cpp-microservice/mysql_microservice_modular/src/: config.cpp  handlers.cpp  main.cpp  mysql_pool.cpp
cpp-microservice/mysql_microservice_modular/tests/: test_client.py
cpp-microservice/redis_microservice/: CMakeLists.txt  README.md  redis_microservice_test.py
cpp-microservice/redis_microservice/include/: redis_client.hpp
cpp-microservice/redis_microservice/results/20250904-081643/: report.md  results.json
cpp-microservice/redis_microservice/results/20250904-081918/: report.md  results.json
cpp-microservice/redis_microservice/src/: main.cpp
cpp-microservice/src/: main.cpp
cpp-microservice/src/app/: config.cpp
cpp-microservice/src/db/: mysql_pool.cpp  redis_client.cpp
cpp-microservice/src/model/: user_dao.cpp
llama_cpp/: README_docker_llama_min.md  README_issues_min.md
llama_cpp/llama_docker/: Dockerfile.cuda
